--- a/src/styles/box.css
+++ b/src/styles/box.css
@@ -1,13 +1,5 @@
 .first_view{
   height : 100vh;
   display : flex;
-  flex-direction : row;
-  flex-wrap : wrap;
-}
-
-.services{
-  margin : 100px 0;
-  display : flex;
-  flex-direction : row;
-  flex-wrap : wrap;
+  flex-flow : column;    
 }
