.first-view styles modified and .services styles added

--- a/src/styles/box.css
+++ b/src/styles/box.css
@@ -1,5 +1,13 @@
 .first_view{
   height : 100vh;
   display : flex;
-  flex-flow : column;    
+  flex-direction : column;  
+  justify-content : space-evenly;
+}
+
+.services{
+  display : flex;
+  flex-flow : row wrap;
+  justify-content : space-evenly;
+  align-items : center;
 }
