--- a/src/styles/box.css
+++ b/src/styles/box.css
@@ -2,7 +2,7 @@
   height : 100vh;
   display : flex;
   flex-direction : column;  
-  justify-content : space-evenly;
+  justify-content : space-between;
 }
 
 .services{
@@ -10,4 +10,5 @@
   flex-flow : row wrap;
   justify-content : space-evenly;
   align-items : center;
+  margin-top : 200px;
 }
