--- a/src/styles/box.css
+++ b/src/styles/box.css
@@ -2,7 +2,7 @@
   height : 100vh;
   display : flex;
   flex-direction : column;  
-  justify-content : space-between;
+  justify-content : space-around;
 }
 
 .services{
