--- a/src/styles/box.css
+++ b/src/styles/box.css
@@ -10,4 +10,11 @@
   flex-flow : row wrap;
   justify-content : space-evenly;
   align-items : center;
+  margin-bottom : 50px;
+}
+
+.prescription{
+  margin-bottom : 50px;
+  padding : 50px;
+  
 }
