--- a/src/styles/box.css
+++ b/src/styles/box.css
@@ -14,7 +14,11 @@
 }
 
 .prescription{
+  display : flex;
+  flex-flow : row wrap;
+  justify-content : space-evenly;
+  align-items : center;
   margin-bottom : 50px;
   padding : 50px;
-  
+  height : 400px;
 }
