--- a/src/styles/prescription.css
+++ b/src/styles/prescription.css
@@ -24,3 +24,13 @@ textarea{
   padding : 15px;
   font-size : 16px;
 }
+
+.prescription .button{
+  height : 30px;
+  width : 100%;
+  background-color : #6772E5;
+  color : #fff;
+  text-align : center;
+  font-size : 1.2em;
+  border : none;
+}
