--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -16,7 +16,6 @@
 a{
   color : inherit;
   text-decoration : none;  
-  
 }
 
 a:hover{
@@ -24,18 +23,19 @@ a:hover{
 }
 
 .prescription .button{
-  font-size : 1.2em;
-  margin : 0 7px ; 
+  font-size : 1.2em; 
   padding : 0 2px;
   color : #fff;
   height : 100%;
   display : flex;
   align-items : center;
+  background-color : #6772E5;
+  border-radius : 8px;
 }
 
 .prescription .button:hover{
   color : #6772E5;
-  border : 2px #6772E5 solid;
-  
+  border : 3px #6772E5 solid;
+  background-color : #fff;  
 }
 
