--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -29,6 +29,7 @@ a:hover{
   height : 100%;
   display : flex;
   align-items : center;
+  justify-content : center;
   background-color : #6772E5;
   border-radius : 8px;
 }
