--- a/src/styles/prescription.css
+++ b/src/styles/prescription.css
@@ -35,6 +35,7 @@ textarea{
     background-color : #6772E5;
     padding : 80px;
     display : flex;
-    justify-content : center;
+    flex-direction : column;
+    justify-content : space-between;
     align-items : center;
   }
