--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -14,8 +14,10 @@
 }
 
 a{
+  text-align : center;
   color : inherit;
-  text-decoration : none;  
+  text-decoration : none; 
+  width : 100%;
 }
 
 a:hover{
@@ -29,7 +31,6 @@ a:hover{
   height : 100%;
   display : flex;
   align-items : center;
-  justify-content : center;
   background-color : #6772E5;
   border-radius : 8px;
 }
@@ -38,5 +39,6 @@ a:hover{
   color : #6772E5;
   border : 3px #6772E5 solid;
   background-color : #fff;  
+  box-sizing : border-box;
 }
 
