--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,12 +1,13 @@
 .prescription .button, .new .button{
   font-size : 1.2em; 
-  padding : 0 2px;
+  padding : 0 25px;
   color : #fff;
-  height : 100%;
+  height : 40px;
   display : flex;
   align-items : center;
   background-color : #6772E5;
   border-radius : 8px;
+  cursor : pointer;
 }
 
 .prescription .button:hover, .new .button:hover{
