--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -11,7 +11,7 @@
   border : none;
 }
 
-.button:hover{
+.button:hover:not([disabled]){
   color : #6772E5;
   border : 3px #6772E5 solid;
   background-color : #fff;  
