--- a/src/styles/lecteur.css
+++ b/src/styles/lecteur.css
@@ -17,3 +17,24 @@
   justify-content: center;
   color : #6772E5;
 }
+
+.file_select{
+  width : 300px;
+  height : 40px;
+  display: flex;
+  flex-flow : row no-wrap;
+  align-items: center;
+      margin-top : 5px;
+}
+
+  .filename{
+    border-radius : 8px;
+    padding : 10px;
+    flex-grow : 1;
+    background-color : #fff;
+    box-sizing : border-box;
+    height : 40px;
+    margin-left : 2px;
+  }
+
+  
