--- a/src/styles/box.css
+++ b/src/styles/box.css
@@ -1,8 +1,10 @@
-.first_view{
+
+first_view{
   min-height : 100vh;
   display : flex;
   flex-direction : column;  
   justify-content : space-between;
+  font-family : 'Mitr';
 }
 
 .services{
