--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Actor&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Varela&display=swap');
+
 *{
   margin: 0;
   padding : 0;
