--- a/src/styles/lecteur.module.css
+++ b/src/styles/lecteur.module.css
@@ -1,4 +1,4 @@
-#file{
+.file{
   width : 0.1px;
   height : 0.1px;
   opacity : 0;
@@ -37,7 +37,7 @@
     margin-left : 2px;
   }
 
-  video{
+.video{
     width : 250px;
     border : 2px #fff solid;
   }
