--- a/src/styles/navbutton.module.css
+++ b/src/styles/navbutton.module.css
@@ -1,4 +1,4 @@
-.header nav .navbutton{
+.navbutton{
   margin : 0 7px ; 
   padding : 0 2px;
   color : #fff;
@@ -6,21 +6,12 @@
   display : flex;
   align-items : center;
   font-family : 'Varela';
+  text-decoration : none;
 }
 
-.header nav .navbutton:hover{
+.navbutton:hover  ,.active{
   background-color : #fff;
   color : #6772E5;
   transform : scale(1.2)
 }
 
-a{
-  text-align : center;
-  color : inherit;
-  text-decoration : none; 
-  width : 100%;
-}
-
-a:hover{
-  color : inherit;
-}
